# ocr-service

./: Cargo.toml
src/: main.rs
