[package]
name = "ocr-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.55.1"
aws-sdk-s3 = "0.26.0"
aws-sdk-textract = "0.26.0"
aws-sdk-sqs = "0.26.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
tokio-stream = "0.1.12"
